Config Kotlin & complete functionality